# FreeRTOS-TFLM

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
examples/freertos/: CMakeLists.txt  FreeRTOSConfig.h  float_model_data.cpp  float_model_data.h  freertos_test.cpp  int8_model_data.cpp  int8_model_data.h  main.cpp  main_functions.cpp  main_functions.h
examples/freertos_gru/: CMakeLists.txt
examples/freertos_gru/config/: freertos_config.cmake  freertos_gru_config.cmake
examples/freertos_gru/src/: Agent.cpp  BlinkAgent.cpp  CMakeLists.txt  NnetAgent.cpp  NnetAgent.h  main.cpp  model_fp32.h  model_int8.h
examples/freertos_nn/: CMakeLists.txt
examples/freertos_nn/src/: main.cpp
